// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileInput /> should match snapshots 1`] = `
<label
  className="fileInput"
>
  <input
    onChange={[Function]}
    type="file"
  />
  <span
    className="fileUploadInput"
  >
    Choose file...
  </span>
</label>
`;

exports[`<FileInput /> should match snapshots 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,9 @@
  <label
-   className=\\"fileInput disabled\\"
+   className=\\"fileInput\\"
  >
    <input
-     disabled={true}
      onChange={[Function anonymous]}
      type=\\"file\\"
    />
    <span
      className=\\"fileUploadInput\\""
`;

exports[`<FileInput /> should match snapshots 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  <label
-   className=\\"fileInput fill\\"
+   className=\\"fileInput\\"
  >
    <input
      onChange={[Function anonymous]}
      type=\\"file\\"
    />"
`;

exports[`<FileInput /> should match snapshots 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  <label
-   className=\\"fileInput large\\"
+   className=\\"fileInput\\"
  >
    <input
      onChange={[Function anonymous]}
      type=\\"file\\"
    />"
`;

exports[`<FileInput /> should match snapshots 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,8 +6,8 @@
      type=\\"file\\"
    />
    <span
      className=\\"fileUploadInput\\"
    >
-     Hello World
+     Choose file...
    </span>
  </label>"
`;
